Убрал arial-label где он не нужен, добавил диапазон цены в фильтр catalog.html

--- a/index.html
+++ b/index.html
@@ -44,12 +44,12 @@
       <ul>
         <li>
           <h3>Материалы</h3>
-          <a href="" aria-label="Материалы на любой вкус">На любой вкус</a>
+          <a href="">На любой вкус</a>
           <div>Иконка</div>
         </li>
         <li>
           <h3>Инструмент</h3>
-          <a href="" aria-label="Инструмент на все случаи">На все случаи</a>
+          <a href="">На все случаи</a>
           <div>Иконка</div>
         </li>
         <li>
@@ -249,14 +249,14 @@
               </label>
             </p>
             <button type="submit">Оформить заказ</button>
-            <button type="button">Закрыть форму</button>
+            <button type="button" aria-label="Закрыть форму">x</button>
           </form>
         </div>
       </section>
       <section>
         <h2 class="visually-hidden">Карта google-map</h2> <!-- Скрытый заголовок-->
         <div>Карта</div>
-        <button type="button">Закрыть карту</button>
+        <button type="button" aria-label="Закрыть форму">x</button>
       </section>
     </section>
   </main>
@@ -295,7 +295,7 @@
       </div>
       <div>
         <p>Разработано -</p>
-        <a href="https://htmlacademy.ru" aria-label="Сайти разработчика">htmlacademy.ru</a>
+        <a href="https://htmlacademy.ru">htmlacademy.ru</a>
       </div>
     </div>
   </footer>
