--- a/catalog.html
+++ b/catalog.html
@@ -4,63 +4,73 @@
 <head>
   <meta charset="utf-8">
   <title>HTML Academy: Техномарт</title>
+  <link href="https://fonts.googleapis.com/css2?family=Cuprum:wght@400;700&family=PT+Sans:wght@400;700&display=swap"
+    rel="stylesheet">
+  <link rel="stylesheet" href="css/normalize.css">
+  <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
   <header>
-    <div>
-      <a href="index.html" aria-label="Компания Техномарт">ТЕХНОМАРТ</a>
-      <div>Поиск</div>
-      <a href="">Закладки</a>
-      <a href="">Корзина</a>
-      <a href="">Оформить заказ</a>
+    <div class="box-header">
+      <a href="index.html" class="header-logo">ТЕХНОМАРТ</a>
+      <div class="header-search">Поиск</div>
+      <a href="" class="header-marker">Закладки</a>
+      <a href="" class="header-basket">Корзина</a>
+      <a href="" class="header-order">Оформить заказ</a>
     </div>
     <div>
-      <h1>Интернет-магазин строительных материалов и инструментов для ремонта</h1>
-      <div>
-        <p>+7 (812) 555-05-55</p>
-        <p>г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8 *</p>
-      </div>
-      <div>
-        <div>
-          <p>Равшан Джамшутович</p>
+      <div class="main-header">
+        <div class="main-header-title">
+          <h1>Интернет-магазин строительных материалов и инструментов для ремонта</h1>
         </div>
-        <a href="">Мои заказы</a>
-        <a href="">Личный кабинет</a>
+        <div class="main-header-contact">
+          <p>+7 (812) 555-05-55</p>
+          <p>г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8 *</p>
+        </div>
+        <div class="user-navigation">
+          <div>
+            <p>Равшан Джамшутович</p>
+          </div>
+          <a href="">Мои заказы</a>
+          <a href="">Личный кабинет</a>
+        </div>
       </div>
+      <nav class="main-navigation">
+        <ul class="site-navigation">
+          <li><a href="index.html">Главная</a></li>
+          <li><a href="">Компания</a></li>
+          <li><a href="catalog.html">Каталог</a></li>
+          <li><a href="">Новости</a></li>
+          <li><a href="">Спецпредложения</a></li>
+          <li><a href="">Доставка</a></li>
+          <li><a href="">Контакты</a></li>
+        </ul>
+      </nav>
     </div>
-    <nav>
-      <ul>
-        <li><a href="index.html">Главная</a></li>
-        <li><a href="">Компания</a></li>
-        <li><a href="catalog.html">Каталог</a></li>
-        <li><a href="">Новости</a></li>
-        <li><a href="">Спецпредложения</a></li>
-        <li><a href="">Доставка</a></li>
-        <li><a href="">Контакты</a></li>
-      </ul>
-    </nav>
   </header>
   <main>
-    <section>
-      <section>
-        <ul>
+    <section class="catalog">
+      <section class="breadcrumbs">
+        <ul class="breadcrumbs-list">
           <li><a href="index.html">На главную</a></li>
           <li><a href="catalog.html">Каталог</a></li>
           <li><a href="">Инструмент</a></li>
           <li><a href="">Перфораторы</a></li>
         </ul>
-      </section>>
-      <h2>Перфораторы</h2>
-      <section>
+      </section>
+      <section class="catalog-title">
+        <h2>Перфораторы</h2>
+      </section>
+      <section class="catalog-filter">
         <h3>Фильтр</h3>
         <form action="https://echo.htmlacademy.ru" method="get">
-          <fieldset>
+          <fieldset class="filter-price">
             <legend>Цена</legend>
           </fieldset>
-          <fieldset>
+          <fieldset class="filter-manufacturer">
             <legend>Производитель</legend>
-            <ul>
+            <ul class="manufacturer-list">
               <li><input type="checkbox" name="bosch" id="filter-bosch">
                 <label for="filter-bosch">Bosch</label>
               </li>
@@ -78,9 +88,9 @@
               </li>
             </ul>
           </fieldset>
-          <fieldset>
+          <fieldset class="filter-power-supply">
             <legend>Питание</legend>
-            <ul>
+            <ul class="power-supply-list">
               <li><input type="radio" name="power-supply" value="battery" id="filter-battery">
                 <label for="filter-battery">Аккумуляторные</label>
               </li>
@@ -89,13 +99,13 @@
               </li>
             </ul>
           </fieldset>
-          <button type="submit">Показать</button>
+          <button type="submit" class="button-filter">Показать</button>
         </form>
       </section>
-      <section>
+      <section class="catalog-sorting">
         <h3>Cортировка:</h3>
-        <div>
-          <ul>
+        <div class="sorting">
+          <ul class="sorting-list">
             <li>
               <a href="">По цене</a>
             </li>
@@ -105,15 +115,15 @@
             <li>
               <a href="">По функционалу</a>
             </li>
-            <li><a href="">Стрелка вверх</a></li>
-            <li><a href="">Стрелка вниз</a></li>
+            <li><a href="" class="button-down">Стрелка вверх</a></li>
+            <li><a href="" class="button-up">Стрелка вниз</a></li>
           </ul>
         </div>
       </section>
-      <section>
-        <h3 class="visually-hidden">Каталог перфораторов</h3> <!-- скрытый заголовок-->
-        <ul>
-          <li>
+      <section class="product">
+        <h3 class="visually-hidden">Каталог перфораторов</h3> <!-- Скрытый заголовок-->
+        <ul class="product-list">
+          <li class="product-item">
             <img src="img/hummer-drill-bfg6000.jpg" width="144" height="128" alt="Перфоратор Bosch BFG 6000">
             <h4>Перфоратор BOSCH BFG 6000</h4>
             <p>30500 Р.</p>
@@ -123,7 +133,7 @@
               <button type="button">В закладки</button>
             </div>
           </li>
-          <li>
+          <li class="product-item">
             <img src="img/hummer-drill-bfg6000.jpg" width="144" height="128" alt="Перфоратор Bosch BFG 6000">
             <h4>Перфоратор BOSCH BFG 6000</h4>
             <p>30500 Р.</p>
@@ -133,7 +143,7 @@
               <button type="button">В закладки</button>
             </div>
           </li>
-          <li>
+          <li class="product-item">
             <img src="img/hummer-drill-bfg6000.jpg" width="144" height="128" alt="Перфоратор Bosch BFG 6000">
             <h4>Перфоратор BOSCH BFG 6000</h4>
             <p>30500 Р.</p>
@@ -143,7 +153,7 @@
               <button type="button">В закладки</button>
             </div>
           </li>
-          <li>
+          <li class="product-item">
             <img src="img/hummer-drill-bfg2000-3000.jpg" width="127" height="112" alt="Перфоратор Bosch BFG 3000">
             <h4>Перфоратор BOSCH BFG 3000</h4>
             <p>22500 Р.</p>
@@ -153,7 +163,7 @@
               <button type="button">В закладки</button>
             </div>
           </li>
-          <li>
+          <li class="product-item">
             <img src="img/hummer-drill-bfg6000.jpg" width="144" height="128" alt="Перфоратор Bosch BFG 6000">
             <h4>Перфоратор BOSCH BFG 6000</h4>
             <p>30500 Р.</p>
@@ -163,7 +173,8 @@
               <button type="button">В закладки</button>
             </div>
           </li>
-          <li><img src="img/hummer-drill-bfg2000-3000.jpg" width="127" height="112" alt="Перфоратор Bosch BFG 2000">
+          <li class="product-item"><img src="img/hummer-drill-bfg2000-3000.jpg" width="127" height="112"
+              alt="Перфоратор Bosch BFG 2000">
             <h4>Перфоратор BOSCH BFG 2000</h4>
             <p></p>
             <p>12500 Р.</p>
@@ -172,7 +183,7 @@
               <button type="button">В закладки</button>
             </div>
           </li>
-          <li>
+          <li class="product-item">
             <img src="img/hummer-drill-bfg2000-3000.jpg" width="127" height="112" alt="Перфоратор Bosch BFG 3000">
             <h4>Перфоратор BOSCH BFG 3000</h4>
             <p>22500 Р.</p>
@@ -182,7 +193,7 @@
               <button type="button">В закладки</button>
             </div>
           </li>
-          <li>
+          <li class="product-item">
             <img src="img/hummer-drill-bfg6000.jpg" width="144" height="128" alt="Перфоратор Bosch BFG 6000">
             <h4>Перфоратор BOSCH BFG 6000</h4>
             <p>30500 Р.</p>
@@ -192,7 +203,7 @@
               <button type="button">В закладки</button>
             </div>
           </li>
-          <li>
+          <li class="product-item">
             <img src="img/hummer-drill-bfg2000-3000.jpg" width="127" height="112" alt="Перфоратор Bosch BFG 2000">
             <h4>Перфоратор BOSCH BFG 2000</h4>
             <p></p>
@@ -204,14 +215,14 @@
           </li>
         </ul>
       </section>
-      <ul>
+      <ul class="catalog-navigation">
         <li><a href="" aria-label="На первую страницу каталога">1</a></li>
         <li><a href="" aria-label="На вторую страницу каталога">2</a></li>
         <li><a href="" aria-label="На третью страницу каталога">3</a></li>
         <li><a href="" aria-label="Следующая страница каталога">Следующая</a></li>
       </ul>
     </section>
-    <section>
+    <section class="catalog-text">
       <h2>ПАРА СЛОВ О ПЕРФОРАТОРАХ</h2>
       <p>Перфоратор — универсальный строительный инструмент. Предназначен для сверления и долбления отверстий в
         кирпиче, бетоне и камне.<br>
@@ -221,23 +232,23 @@
         ударная дрель.
       </p>
     </section>
-    <section>
+    <section class="catalog-basket">
       <h2 class="visually-hidden">Корзина</h2> <!-- Скрытый заголовок-->
       <p>Товар добавлен в корзину</p>
-      <a href="">Оформить заказ</a>
-      <a href="">Продолжить покупки</a>
-      <button type="button">Закрыть корзину</button>
+      <a href="" class="link-button">Оформить заказ</a>
+      <a href="" class="button-basket">Продолжить покупки</a>
+      <button type="button" class="button-close">x</button>
     </section>
   </main>
   <footer>
-    <div>
-      <div>
+    <div class="footer-box">
+      <div class="footer-logo">
         <a href="">ТЕХНОМАРТ</a>
       </div>
-      <div>
+      <div class="footer-address">
         <p>г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8 +7 (812) 555-05-55</p>
       </div>
-      <div>
+      <div class="footer-site-navigation">
         <ul>
           <li><a href="">Компания</a></li>
           <li><a href="">Новости</a></li>
@@ -251,20 +262,20 @@
         </ul>
       </div>
     </div>
-    <div>
+    <div class="footer-copyright">
       <p>© 2010–2019 Компания «Техномарт»<br>Все права защищены</p>
-      <ul>
+      <ul class="social">
         <li><a href="">Вконтакте</a></li>
         <li><a href="">Фейсбук</a></li>
         <li><a href="">Инстаграм</a></li>
       </ul>
-      <div>
+      <div class="feedback-email">
         <p>Обратная связь:</p>
         <a href="">mail@htmlacademy.ru</a>
       </div>
-      <div>
+      <div class="footer-developer">
         <p>Разработано -</p>
-        <a href="https://htmlacademy.ru">htmlacademy.ru</a>
+        <a href="https://htmlacademy.ru" aria-label="Сайти разработчика">htmlacademy.ru</a>
       </div>
     </div>
   </footer>
