--- a/catalog.html
+++ b/catalog.html
@@ -19,41 +19,39 @@
       <a href="" class="header-basket">Корзина</a>
       <a href="" class="header-order">Оформить заказ</a>
     </div>
-    <div>
-      <div class="main-header">
-        <div class="main-header-title">
-          <h1>Интернет-магазин строительных материалов и инструментов для ремонта</h1>
-        </div>
-        <div class="main-header-contact">
-          <p>+7 (812) 555-05-55</p>
-          <p>г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8 *</p>
-        </div>
-        <div class="user-navigation">
-          <div>
-            <p>Равшан Джамшутович</p>
-          </div>
-          <a href="">Мои заказы</a>
-          <a href="">Личный кабинет</a>
-        </div>
+    <div class="main-header">
+      <div class="main-header-title">
+        <h1>Интернет-магазин строительных материалов и инструментов для ремонта</h1>
       </div>
-      <nav class="main-navigation">
-        <ul class="site-navigation">
-          <li><a href="index.html">Главная</a></li>
-          <li><a href="">Компания</a></li>
-          <li><a href="catalog.html">Каталог</a></li>
-          <li><a href="">Новости</a></li>
-          <li><a href="">Спецпредложения</a></li>
-          <li><a href="">Доставка</a></li>
-          <li><a href="">Контакты</a></li>
-        </ul>
-      </nav>
+      <div class="main-header-contact">
+        <p>+7 (812) 555-05-55</p>
+        <p>г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8 *</p>
+      </div>
+      <div class="user-navigation">
+        <div>
+          <p>Равшан Джамшутович</p>
+        </div>
+        <a href="">Мои заказы</a>
+        <a href="">Личный кабинет</a>
+      </div>
     </div>
+    <nav class="main-navigation">
+      <ul class="site-navigation">
+        <li><a href="index.html">Главная</a></li>
+        <li><a href="">Компания</a></li>
+        <li><a href="catalog.html">Каталог</a></li>
+        <li><a href="">Новости</a></li>
+        <li><a href="">Спецпредложения</a></li>
+        <li><a href="">Доставка</a></li>
+        <li><a href="">Контакты</a></li>
+      </ul>
+    </nav>
   </header>
   <main>
     <section class="catalog">
       <section class="breadcrumbs">
         <ul class="breadcrumbs-list">
-          <li><a href="index.html">На главную</a></li>
+          <li><a href="index.html" aria-label="На главную">На главную</a></li>
           <li><a href="catalog.html">Каталог</a></li>
           <li><a href="">Инструмент</a></li>
           <li><a href="">Перфораторы</a></li>
@@ -116,8 +114,8 @@
             <li>
               <a href="">По функционалу</a>
             </li>
-            <li><a href="" class="button-down">Стрелка вверх</a></li>
-            <li><a href="" class="button-up">Стрелка вниз</a></li>
+            <li><a href="" class="button-down" aria-label="Сортировать по убыванию">Стрелка вверх</a></li>
+            <li><a href="" class="button-up" aria-label="Сортировать по возрастанию">Стрелка вниз</a></li>
           </ul>
         </div>
       </section>
@@ -130,8 +128,8 @@
             <p>30500 Р.</p>
             <p>25500 Р.</p>
             <div>
-              <button type="button">Купить</button>
-              <button type="button">В закладки</button>
+              <button type="button" class="button-buy">Купить</button>
+              <button type="button" class="button-marker">В закладки</button>
             </div>
           </li>
           <li class="product-item">
@@ -140,8 +138,8 @@
             <p>30500 Р.</p>
             <p>25500 Р.</p>
             <div>
-              <button type="button">Купить</button>
-              <button type="button">В закладки</button>
+              <button type="button" class="button-buy">Купить</button>
+              <button type="button" class="button-marker">В закладки</button>
             </div>
           </li>
           <li class="product-item">
@@ -150,8 +148,8 @@
             <p>30500 Р.</p>
             <p>25500 Р.</p>
             <div>
-              <button type="button">Купить</button>
-              <button type="button">В закладки</button>
+              <button type="button" class="button-buy">Купить</button>
+              <button type="button" class="button-marker">В закладки</button>
             </div>
           </li>
           <li class="product-item">
@@ -160,8 +158,8 @@
             <p>22500 Р.</p>
             <p>15500 Р.</p>
             <div>
-              <button type="button">Купить</button>
-              <button type="button">В закладки</button>
+              <button type="button" class="button-buy">Купить</button>
+              <button type="button" class="button-marker">В закладки</button>
             </div>
           </li>
           <li class="product-item">
@@ -170,8 +168,8 @@
             <p>30500 Р.</p>
             <p>25500 Р.</p>
             <div>
-              <button type="button">Купить</button>
-              <button type="button">В закладки</button>
+              <button type="button" class="button-buy">Купить</button>
+              <button type="button" class="button-marker">В закладки</button>
             </div>
           </li>
           <li class="product-item"><img src="img/hummer-drill-bfg2000-3000.jpg" width="127" height="112"
@@ -180,8 +178,8 @@
             <p></p>
             <p>12500 Р.</p>
             <div>
-              <button type="button">Купить</button>
-              <button type="button">В закладки</button>
+              <button type="button" class="button-buy">Купить</button>
+              <button type="button" class="button-marker">В закладки</button>
             </div>
           </li>
           <li class="product-item">
@@ -190,8 +188,8 @@
             <p>22500 Р.</p>
             <p>15500 Р.</p>
             <div>
-              <button type="button">Купить</button>
-              <button type="button">В закладки</button>
+              <button type="button" class="button-buy">Купить</button>
+              <button type="button" class="button-marker">В закладки</button>
             </div>
           </li>
           <li class="product-item">
@@ -200,8 +198,8 @@
             <p>30500 Р.</p>
             <p>25500 Р.</p>
             <div>
-              <button type="button">Купить</button>
-              <button type="button">В закладки</button>
+              <button type="button" class="button-buy">Купить</button>
+              <button type="button" class="button-marker">В закладки</button>
             </div>
           </li>
           <li class="product-item">
@@ -210,17 +208,17 @@
             <p></p>
             <p>12500 Р.</p>
             <div>
-              <button type="button">Купить</button>
-              <button type="button">В закладки</button>
+              <button type="button" class="button-buy">Купить</button>
+              <button type="button" class="button-marker">В закладки</button>
             </div>
           </li>
         </ul>
       </section>
       <ul class="catalog-navigation">
-        <li><a href="" aria-label="На первую страницу каталога">1</a></li>
-        <li><a href="" aria-label="На вторую страницу каталога">2</a></li>
-        <li><a href="" aria-label="На третью страницу каталога">3</a></li>
-        <li><a href="" aria-label="Следующая страница каталога">Следующая</a></li>
+        <li class="button-filter"><a href="" aria-label="На первую страницу каталога">1</a></li>
+        <li class="button-filter"><a href="" aria-label="На вторую страницу каталога">2</a></li>
+        <li class="button-filter"><a href="" aria-label="На третью страницу каталога">3</a></li>
+        <li class="button-filter"><a href="" aria-label="Следующая страница каталога">Следующая</a></li>
       </ul>
     </section>
     <section class="catalog-text">
@@ -266,9 +264,9 @@
     <div class="footer-copyright">
       <p>© 2010–2019 Компания «Техномарт»<br>Все права защищены</p>
       <ul class="social">
-        <li><a href="">Вконтакте</a></li>
-        <li><a href="">Фейсбук</a></li>
-        <li><a href="">Инстаграм</a></li>
+        <li><a href="" aria-label="Вконтакте">Вконтакте</a></li>
+        <li><a href="" aria-label="Фейсбук">Фейсбук</a></li>
+        <li><a href="" aria-label="Инстаграм">Инстаграм</a></li>
       </ul>
       <div class="feedback-email">
         <p>Обратная связь:</p>
