--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     </div>
     <div class="main-header">
       <div class="main-header-title">
-        <h1>Интернет-магазин строительных материалов и инструментов для ремонта</h1>
+        <h1>Интернет-магазин<br> строительных материалов<br> и инструментов для ремонта</h1>
       </div>
       <div class="main-header-contact">
         <p>+7 (812) 555-05-55</p>
