Базовая стилизация шапки

--- a/index.html
+++ b/index.html
@@ -13,10 +13,12 @@
 <body>
   <header>
     <div class="box-header">
-      <a href="index.html" class="header-logo">ТЕХНОМАРТ</a>
-      <div class="header-search">Поиск</div>
-      <a href="" class="header-marker">Закладки</a>
-      <a href="" class="header-basket">Корзина</a>
+      <a class="header-logo">ТЕХНОМАРТ</a>
+      <div class="header-search"><span><img src="img/icon/icon-search.svg" width="17px" height="17px"></span>Поиск</div>
+      <a href="" class="header-marker"><span><img src="img/icon/icon-bookmark.svg" width="14px"
+            height="16px"></span>Закладки</a>
+      <a href="" class="header-basket"><span><img src="img/icon/icon-cart.svg" width="15px"
+            height="15px"></span>Корзина</a>
       <a href="" class="header-order">Оформить заказ</a>
     </div>
     <div class="main-header">
