--- a/catalog.html
+++ b/catalog.html
@@ -13,26 +13,28 @@
 <body>
   <header>
     <div class="box-header">
-      <a href="index.html" class="header-logo">ТЕХНОМАРТ</a>
-      <div class="header-search">Поиск</div>
-      <a href="" class="header-marker">Закладки</a>
-      <a href="" class="header-basket">Корзина</a>
+      <a class="header-logo">ТЕХНОМАРТ</a>
+      <div class="header-search"><span><img src="img/icon/icon-search.svg" width="17px" height="17px"></span>Поиск</div>
+      <a href="" class="header-marker"><span><img src="img/icon/icon-bookmark.svg" width="14px"
+            height="16px"></span>Закладки</a>
+      <a href="" class="header-basket"><span><img src="img/icon/icon-cart.svg" width="15px"
+            height="15px"></span>Корзина</a>
       <a href="" class="header-order">Оформить заказ</a>
     </div>
     <div class="main-header">
       <div class="main-header-title">
-        <h1>Интернет-магазин строительных материалов и инструментов для ремонта</h1>
+        <h1>Интернет-магазин<br> строительных материалов<br> и инструментов для ремонта</h1>
       </div>
       <div class="main-header-contact">
         <p>+7 (812) 555-05-55</p>
         <p>г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8 *</p>
       </div>
       <div class="user-navigation">
-        <div>
+        <div class="user-name">
           <p>Равшан Джамшутович</p>
         </div>
-        <a href="">Мои заказы</a>
-        <a href="">Личный кабинет</a>
+        <a href="" class="user-order">Мои заказы</a>
+        <a href="" class="user-cabinet">Личный кабинет</a>
       </div>
     </div>
     <nav class="main-navigation">
