Базовая стилизация футера

--- a/index.html
+++ b/index.html
@@ -277,12 +277,14 @@
         <p>г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8 +7 (812) 555-05-55</p>
       </div>
       <div class="footer-site-navigation">
-        <ul>
+        <ul class="footer-navigation-top">
           <li><a href="">Компания</a></li>
           <li><a href="">Новости</a></li>
           <li><a href="catalog.html">Каталог</a></li>
           <li><a href="">Доставка</a></li>
           <li><a href="">Контакты</a></li>
+        </ul>
+        <ul class="footer-navigation-bottom">
           <li><a href="">Материалы</a></li>
           <li><a href="">Техника</a></li>
           <li><a href="">Инструмент</a></li>
@@ -293,9 +295,12 @@
     <div class="footer-copyright">
       <p>© 2010–2019 Компания «Техномарт»<br>Все права защищены</p>
       <ul class="social">
-        <li><a href="">Вконтакте</a></li>
-        <li><a href="">Фейсбук</a></li>
-        <li><a href="">Инстаграм</a></li>
+        <li><a href="" class="social-button" aria-label="Мы Вконтакте"><img src="img/icon/icon-vk.svg" width="26px"
+              height="15px"></a></li>
+        <li><a href="" class="social-button" aria-label="Мы в Фейсбуке"><img src="img/icon/icon-fb.svg" width="12px"
+              height="22px"></a></li>
+        <li><a href="" class="social-button" aria-label="Мы в инстаграм"><img src="img/icon/icon-insta.svg" width="21px"
+              height="21px"></a></li>
       </ul>
       <div class="feedback-email">
         <p>Обратная связь:</p>
