--- a/catalog.html
+++ b/catalog.html
@@ -53,9 +53,11 @@
     <section class="catalog">
       <section class="breadcrumbs">
         <ul class="breadcrumbs-list">
-          <li><a href="index.html" aria-label="На главную">На главную</a></li>
-          <li><a href="catalog.html">Каталог</a></li>
-          <li><a href="">Инструмент</a></li>
+          <li><a href="index.html" aria-label="На главную"><img src="img/icon/icon-home.svg"><span
+                class="arrow-right">></span></a>
+          </li>
+          <li><a href="catalog.html">Каталог<span class="arrow-right">></span></a></li>
+          <li><a href="">Инструмент<span class="arrow-right">></span></a></li>
           <li><a href="">Перфораторы</a></li>
         </ul>
       </section>
@@ -63,14 +65,14 @@
         <h2>Перфораторы</h2>
       </section>
       <section class="catalog-filter">
-        <h3>Фильтр</h3>
+        <h3>Фильтр:</h3>
         <form action="https://echo.htmlacademy.ru" method="get">
           <fieldset class="filter-price">
-            <legend>Цена</legend>
+            <legend>Цена:</legend>
             <input type="range" name="price" id="price" min="0" max="300">
           </fieldset>
           <fieldset class="filter-manufacturer">
-            <legend>Производитель</legend>
+            <legend>Производители:</legend>
             <ul class="manufacturer-list">
               <li><input type="checkbox" name="bosch" id="filter-bosch">
                 <label for="filter-bosch">Bosch</label>
@@ -90,7 +92,7 @@
             </ul>
           </fieldset>
           <fieldset class="filter-power-supply">
-            <legend>Питание</legend>
+            <legend>Питание:</legend>
             <ul class="power-supply-list">
               <li><input type="radio" name="power-supply" value="battery" id="filter-battery">
                 <label for="filter-battery">Аккумуляторные</label>
@@ -126,7 +128,7 @@
         <ul class="product-list">
           <li class="product-item">
             <img src="img/hummer-drill-bfg6000.jpg" width="144" height="128" alt="Перфоратор Bosch BFG 6000">
-            <h4>Перфоратор BOSCH BFG 6000</h4>
+            <h4>Перфоратор BOSCH<br> BFG 6000</h4>
             <p>30500 Р.</p>
             <p>25500 Р.</p>
             <div>
@@ -136,7 +138,7 @@
           </li>
           <li class="product-item">
             <img src="img/hummer-drill-bfg6000.jpg" width="144" height="128" alt="Перфоратор Bosch BFG 6000">
-            <h4>Перфоратор BOSCH BFG 6000</h4>
+            <h4>Перфоратор BOSCH<br> BFG 6000</h4>
             <p>30500 Р.</p>
             <p>25500 Р.</p>
             <div>
@@ -146,7 +148,7 @@
           </li>
           <li class="product-item">
             <img src="img/hummer-drill-bfg6000.jpg" width="144" height="128" alt="Перфоратор Bosch BFG 6000">
-            <h4>Перфоратор BOSCH BFG 6000</h4>
+            <h4>Перфоратор BOSCH<br> BFG 6000</h4>
             <p>30500 Р.</p>
             <p>25500 Р.</p>
             <div>
@@ -156,7 +158,7 @@
           </li>
           <li class="product-item">
             <img src="img/hummer-drill-bfg2000-3000.jpg" width="127" height="112" alt="Перфоратор Bosch BFG 3000">
-            <h4>Перфоратор BOSCH BFG 3000</h4>
+            <h4>Перфоратор BOSCH<br> BFG 3000</h4>
             <p>22500 Р.</p>
             <p>15500 Р.</p>
             <div>
@@ -166,7 +168,7 @@
           </li>
           <li class="product-item">
             <img src="img/hummer-drill-bfg6000.jpg" width="144" height="128" alt="Перфоратор Bosch BFG 6000">
-            <h4>Перфоратор BOSCH BFG 6000</h4>
+            <h4>Перфоратор BOSCH<br> BFG 6000</h4>
             <p>30500 Р.</p>
             <p>25500 Р.</p>
             <div>
@@ -176,7 +178,7 @@
           </li>
           <li class="product-item"><img src="img/hummer-drill-bfg2000-3000.jpg" width="127" height="112"
               alt="Перфоратор Bosch BFG 2000">
-            <h4>Перфоратор BOSCH BFG 2000</h4>
+            <h4>Перфоратор BOSCH<br> BFG 2000</h4>
             <p></p>
             <p>12500 Р.</p>
             <div>
@@ -186,7 +188,7 @@
           </li>
           <li class="product-item">
             <img src="img/hummer-drill-bfg2000-3000.jpg" width="127" height="112" alt="Перфоратор Bosch BFG 3000">
-            <h4>Перфоратор BOSCH BFG 3000</h4>
+            <h4>Перфоратор BOSCH<br> BFG 3000</h4>
             <p>22500 Р.</p>
             <p>15500 Р.</p>
             <div>
@@ -196,7 +198,7 @@
           </li>
           <li class="product-item">
             <img src="img/hummer-drill-bfg6000.jpg" width="144" height="128" alt="Перфоратор Bosch BFG 6000">
-            <h4>Перфоратор BOSCH BFG 6000</h4>
+            <h4>Перфоратор BOSCH<br> BFG 6000</h4>
             <p>30500 Р.</p>
             <p>25500 Р.</p>
             <div>
@@ -206,7 +208,7 @@
           </li>
           <li class="product-item">
             <img src="img/hummer-drill-bfg2000-3000.jpg" width="127" height="112" alt="Перфоратор Bosch BFG 2000">
-            <h4>Перфоратор BOSCH BFG 2000</h4>
+            <h4>Перфоратор BOSCH<br> BFG 2000</h4>
             <p></p>
             <p>12500 Р.</p>
             <div>
@@ -250,12 +252,14 @@
         <p>г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8 +7 (812) 555-05-55</p>
       </div>
       <div class="footer-site-navigation">
-        <ul>
+        <ul class="footer-navigation-top">
           <li><a href="">Компания</a></li>
           <li><a href="">Новости</a></li>
           <li><a href="catalog.html">Каталог</a></li>
           <li><a href="">Доставка</a></li>
           <li><a href="">Контакты</a></li>
+        </ul>
+        <ul class="footer-navigation-bottom">
           <li><a href="">Материалы</a></li>
           <li><a href="">Техника</a></li>
           <li><a href="">Инструмент</a></li>
@@ -266,9 +270,12 @@
     <div class="footer-copyright">
       <p>© 2010–2019 Компания «Техномарт»<br>Все права защищены</p>
       <ul class="social">
-        <li><a href="" aria-label="Вконтакте">Вконтакте</a></li>
-        <li><a href="" aria-label="Фейсбук">Фейсбук</a></li>
-        <li><a href="" aria-label="Инстаграм">Инстаграм</a></li>
+        <li><a href="" class="social-button" aria-label="Мы Вконтакте"><img src="img/icon/icon-vk.svg" width="26px"
+              height="15px"></a></li>
+        <li><a href="" class="social-button" aria-label="Мы в Фейсбуке"><img src="img/icon/icon-fb.svg" width="12px"
+              height="22px"></a></li>
+        <li><a href="" class="social-button" aria-label="Мы в инстаграм"><img src="img/icon/icon-insta.svg" width="21px"
+              height="21px"></a></li>
       </ul>
       <div class="feedback-email">
         <p>Обратная связь:</p>
@@ -276,7 +283,7 @@
       </div>
       <div class="footer-developer">
         <p>Разработано -</p>
-        <a href="https://htmlacademy.ru" aria-label="Сайти разработчика">htmlacademy.ru</a>
+        <a href="https://htmlacademy.ru">htmlacademy.ru</a>
       </div>
     </div>
   </footer>
