Задание 8 на проверку с правками

--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
   <header>
     <div class="box-header">
       <a class="header-logo">ТЕХНОМАРТ</a>
-      <div class="header-search"><span><img src="img/icon/icon-search.svg" width="17px" height="17px"></span>Поиск</div>
+      <label><img src="img/icon/icon-search.svg" width="17px" height="17px"><input type="search" name="search"
+          placeholder="Поиск:"></label>
       <a href="" class="header-marker"><span><img src="img/icon/icon-bookmark.svg" width="14px"
             height="16px"></span>Закладки</a>
       <a href="" class="header-basket"><span><img src="img/icon/icon-cart.svg" width="15px"
