--- a/index.html
+++ b/index.html
@@ -51,17 +51,17 @@
     <section class="navigation-catalog">
       <h2 class="visually-hidden">КАТАЛОГ</h2> <!-- Скрытый заголовок-->
       <ul class="catalog-menu-list">
-        <li class="catalog-menu-item">
+        <li class="catalog-menu-item materials">
           <h3>Материалы</h3>
           <a href="">На любой вкус</a>
-          <div>Иконка</div>
+          <img src="img/icon/icon-materials.svg" width="44px" height="65px" alt="Материалы">
         </li>
-        <li class="catalog-menu-item">
+        <li class="catalog-menu-item tool">
           <h3>Инструмент</h3>
           <a href="">На все случаи</a>
-          <div>Иконка</div>
+          <img src="img/icon/icon-tool.svg" width="75px" height="61px" alt="Инструмент">
         </li>
-        <li class="catalog-menu-item">
+        <li class="catalog-menu-item hummer-drill">
           <div class="catalog-menu-title">
             <h3>Перфораторы</h3>
             <p>Настоящие мужские игрушки</p>
@@ -72,7 +72,7 @@
             <a href="catalog.html" aria-label="Открыть каталог перфераторов">Открыть каталог</a>
           </div>
         </li>
-        <li class="catalog-menu-item">
+        <li class="catalog-menu-item screwd-river">
           <div class="catalog-menu-title">
             <h3>Дрели</h3>
             <p>Соседям на радость!</p>
@@ -83,20 +83,20 @@
             <a href="catalog.html" aria-label="Открыть каталог дрелей">Открыть каталог</a>
           </div>
         </li>
-        <li class="catalog-menu-item">
+        <li class="catalog-menu-item machinery">
           <h3>Техника</h3>
           <a href="" aria-label="Техника для стройки">Для стройки</a>
-          <div>Иконка</div>
+          <img src="img/icon/icon-machinery.svg" width="78px" height="62px" alt="Трактор">
         </li>
-        <li class="catalog-menu-item">
+        <li class="catalog-menu-item discount">
           <h3>Скидка 50%</h3>
           <a href="" aria-label="Скидка 50% на 350 товаров">На 350 товаров</a>
-          <div>Иконка</div>
+          <img src="img/icon/icon-discount.svg" width="59px" height="72px" alt="">
         </li>
-        <li class="catalog-menu-item">
+        <li class="catalog-menu-item delivery">
           <h3>Доставка</h3>
           <a href="" aria-label="Бесплатная доставка">Бесплатно</a>
-          <div>Иконка</div>
+          <img src="img/icon/icon-delivery.svg" width="78px" height="63px" alt="">
         </li>
       </ul>
     </section>
@@ -110,9 +110,9 @@
         <ul class="product-list">
           <li class="product-item">
             <img src="img/hummer-drill-bfg9000.jpg" width="184" height="164" alt="Перфоратор Bosch BFG 9000">
-            <h4>Перфоратор BOSCH BFG 9000</h4>
-            <p>32500 Р.</p>
-            <p>25500 Р.</p>
+            <h4>Перфоратор BOSCH<br> BFG 9000</h4>
+            <p class="old-price">32500 Р.</p>
+            <p class="new-price">25500 Р.</p>
             <div>
               <button type="button" class="button-buy">Купить</button>
               <button type="button" class="button-marker">В закладки</button>
@@ -120,9 +120,9 @@
           </li>
           <li class="product-item">
             <img src="img/hummer-drill-bfg2000-3000.jpg" width="127" height="112" alt="Перфоратор Bosch BFG 3000">
-            <h4>Перфоратор BOSCH BFG 3000</h4>
-            <p>22500 Р.</p>
-            <p>15500 Р.</p>
+            <h4>Перфоратор BOSCH<br> BFG 3000</h4>
+            <p class="old-price">22500 Р.</p>
+            <p class="new-price">15500 Р.</p>
             <div>
               <button type="button" class="button-buy">Купить</button>
               <button type="button" class="button-marker">В закладки</button>
@@ -130,9 +130,9 @@
           </li>
           <li class="product-item">
             <img src="img/hummer-drill-bfg6000.jpg" width="144" height="128" alt="Перфоратор Bosch BFG 6000">
-            <h4>Перфоратор BOSCH BFG 6000</h4>
-            <p>30500 Р.</p>
-            <p>25500 Р.</p>
+            <h4>Перфоратор BOSCH<br> BFG 6000</h4>
+            <p class="old-price">30500 Р.</p>
+            <p class="new-price">25500 Р.</p>
             <div>
               <button type="button" class="button-buy">Купить</button>
               <button type="button" class="button-marker">В закладки</button>
@@ -140,9 +140,9 @@
           </li>
           <li class="product-item">
             <img src="img/hummer-drill-bfg2000-3000.jpg" width="127" height="112" alt="Перфоратор Bosch BFG 2000">
-            <h4>Перфоратор BOSCH BFG 2000</h4>
-            <p></p>
-            <p>12500 Р.</p>
+            <h4>Перфоратор BOSCH<br> BFG 2000</h4>
+            <p class="old-price"></p>
+            <p class="new-price">12500 Р.</p>
             <div>
               <button type="button" class="button-buy">Купить</button>
               <button type="button" class="button-marker">В закладки</button>
@@ -186,29 +186,29 @@
         </ul>
       </div>
       <div class="services-delivery">
-        <h3>Доставка</h3>
+        <h4>Доставка</h4>
         <p>Мы с удовольствием доставим ваш товар прямо<br>
           к вашему подъезду совершенно бесплатно!<br>
           Ведь мы неплохо заработаем,<br>
           поднимая его на ваш этаж!</p>
-        <div class="delivery-icon">Иконка</div>
+        <img src="img/service-car-delivery.png" width="468px" height="261px" alt="Автомобиль доставки">
       </div>
       <div class="services-guarantee">
-        <h3>Гарантия</h3>
+        <h4>Гарантия</h4>
         <p>Если купленный у нас товар поломается или заискрит,<br>
           а также в случае пожара, спровоцированного его<br>
           возгоранием,вы всегда можете быть уверены в нашей<br>
           гарантии.Мы обменяем сгоревший товар на новый<br>
           Дом уж восстановите как-нибудь сами
         </p>
-        <div class="guarantee-icon">Иконка</div>
+        <img src="img/service-guarantee-100.png" width="389px" height="283px" alt="100%">
       </div>
       <div class="services-credit">
-        <h3>Кредит</h3>
+        <h4>Кредит</h4>
         <p>Залезть в долговую яму стало проще!<br>
           Кредитные консультанты придут вам на помощь.</p>
         <a href="" aria-label="Отправить заявку на кредит" class="link-button">Отправить заявку</a>
-        <div class="credit-icon">Иконка</div>
+        <img src="img/service-credit.png" width="465px" height="285px" alt="">
       </div>
     </section>
     <section class="company-contact">
