Сетка главной страницы index.html

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-  <header>
+  <header class="container">
     <div class="box-header">
       <a class="header-logo">ТЕХНОМАРТ</a>
       <label><img src="img/icon/icon-search.svg" width="17px" height="17px"><input type="search" name="search"
@@ -34,20 +34,20 @@
         <a href="">Войти</a>
         <a href="">Регистрация</a>
       </div>
-      <nav class="main-navigation">
-        <ul class="site-navigation">
-          <li><a href="index.html">Главная</a></li>
-          <li><a href="">Компания</a></li>
-          <li><a href="catalog.html">Каталог</a></li>
-          <li><a href="">Новости</a></li>
-          <li><a href="">Спецпредложения</a></li>
-          <li><a href="">Доставка</a></li>
-          <li><a href="">Контакты</a></li>
-        </ul>
-      </nav>
     </div>
+    <nav class="main-navigation">
+      <ul class="site-navigation">
+        <li><a href="index.html">Главная</a></li>
+        <li><a href="">Компания</a></li>
+        <li><a href="catalog.html">Каталог</a></li>
+        <li><a href="">Новости</a></li>
+        <li><a href="">Спецпредложения</a></li>
+        <li><a href="">Доставка</a></li>
+        <li><a href="">Контакты</a></li>
+      </ul>
+    </nav>
   </header>
-  <main>
+  <main class="container">
     <section class="navigation-catalog">
       <h2 class="visually-hidden">КАТАЛОГ</h2> <!-- Скрытый заголовок-->
       <ul class="catalog-menu-list">
@@ -269,7 +269,7 @@
       </section>
     </section>
   </main>
-  <footer>
+  <footer class="container">
     <div class="footer-box">
       <div class="footer-logo">
         <a href="">ТЕХНОМАРТ</a>
