--- a/index.html
+++ b/index.html
@@ -11,41 +11,47 @@
 </head>
 
 <body>
-  <header class="container">
-    <div class="box-header">
-      <a class="header-logo">ТЕХНОМАРТ</a>
-      <label><img src="img/icon/icon-search.svg" width="17px" height="17px"><input type="search" name="search"
-          placeholder="Поиск:"></label>
-      <a href="" class="header-marker"><span><img src="img/icon/icon-bookmark.svg" width="14px"
-            height="16px"></span>Закладки</a>
-      <a href="" class="header-basket"><span><img src="img/icon/icon-cart.svg" width="15px"
-            height="15px"></span>Корзина</a>
-      <a href="" class="header-order">Оформить заказ</a>
-    </div>
-    <div class="main-header">
-      <div class="main-header-title">
-        <h1>Интернет-магазин<br> строительных материалов<br> и инструментов для ремонта</h1>
-      </div>
-      <div class="main-header-contact">
-        <p>+7 (812) 555-05-55</p>
-        <p>г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8 *</p>
-      </div>
-      <div class="user-navigation">
-        <a href="">Войти</a>
-        <a href="">Регистрация</a>
+  <header>
+    <div class="box-header-wrapper">
+      <div class="container">
+        <div class="box-header">
+          <a class="header-logo"><img src="img/icon/icon-technomart-logo-header.svg" alt="Техномарт"></a>
+          <label><img src="img/icon/icon-search.svg" width="17px" height="17px"><input type="search" name="search"
+              placeholder="Поиск:"></label>
+          <a href="" class="header-marker"><span><img src="img/icon/icon-bookmark.svg" width="14px"
+                height="16px"></span>Закладки</a>
+          <a href="" class="header-basket"><span><img src="img/icon/icon-cart.svg" width="15px"
+                height="15px"></span>Корзина</a>
+          <a href="" class="header-order">Оформить заказ</a>
+        </div>
       </div>
     </div>
-    <nav class="main-navigation">
-      <ul class="site-navigation">
-        <li><a href="index.html">Главная</a></li>
-        <li><a href="">Компания</a></li>
-        <li><a href="catalog.html">Каталог</a></li>
-        <li><a href="">Новости</a></li>
-        <li><a href="">Спецпредложения</a></li>
-        <li><a href="">Доставка</a></li>
-        <li><a href="">Контакты</a></li>
-      </ul>
-    </nav>
+    <div class="container">
+      <div class="main-header">
+        <div class="main-header-title">
+          <h1>Интернет-магазин<br> строительных материалов<br> и инструментов для ремонта</h1>
+        </div>
+        <div class="main-header-contact">
+          <p>+7 (812) 555-05-55</p>
+          <p>г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8 *</p>
+        </div>
+        <div class="user-navigation">
+          <a href="">Войти</a>
+          <a href="">Регистрация</a>
+        </div>
+      </div>
+      <nav class="main-navigation">
+        <ul class="site-navigation">
+          <li><a href="index.html">Главная</a></li>
+          <li><a href="">Компания</a></li>
+          <li><a href="catalog.html">Каталог</a></li>
+          <li><a href="">Новости</a></li>
+          <li><a href="">Спецпредложения</a></li>
+          <li><a href="">Доставка</a></li>
+          <li><a href="">Контакты</a></li>
+        </ul>
+      </nav>
+    </div>
   </header>
   <main class="container">
     <section class="navigation-catalog">
@@ -62,26 +68,16 @@
           <img src="img/icon/icon-tool.svg" width="75px" height="61px" alt="Инструмент">
         </li>
         <li class="catalog-menu-item hummer-drill">
-          <div class="catalog-menu-title">
-            <h3>Перфораторы</h3>
-            <p>Настоящие мужские игрушки</p>
-            <img src="img/man-and-hummer-drill.jpg" width="620" height="266"
-              alt="Мучжина сверлит отверстие в бетонной стене перфоратором фирмы Bosch">
-          </div>
-          <div class="link-button">
-            <a href="catalog.html" aria-label="Открыть каталог перфераторов">Открыть каталог</a>
-          </div>
+          <h3>Перфораторы</h3>
+          <p>Настоящие мужские игрушки</p>
+          <a href="catalog.html" class="link-button hummer-drill-button"
+            aria-label="Открыть каталог перфераторов">Открыть каталог</a>
         </li>
         <li class="catalog-menu-item screwd-river">
-          <div class="catalog-menu-title">
-            <h3>Дрели</h3>
-            <p>Соседям на радость!</p>
-            <img src="img/man-and-screwdriver.jpg" width="620" height="266"
-              alt="Мужчина сверлит отверстие в кирпичной стене дрелью фирмы Bosch">
-          </div>
-          <div class="link-button">
-            <a href="catalog.html" aria-label="Открыть каталог дрелей">Открыть каталог</a>
-          </div>
+          <h3>Дрели</h3>
+          <p>Соседям на радость!</p>
+          <a href="catalog.html" class="link-button screwd-river-button" aria-label="Открыть каталог дрелей">Открыть
+            каталог</a>
         </li>
         <li class="catalog-menu-item machinery">
           <h3>Техника</h3>
@@ -269,47 +265,53 @@
       </section>
     </section>
   </main>
-  <footer class="container">
-    <div class="footer-box">
-      <div class="footer-logo">
-        <a href="">ТЕХНОМАРТ</a>
-      </div>
-      <div class="footer-address">
-        <p>г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8 +7 (812) 555-05-55</p>
-      </div>
-      <div class="footer-site-navigation">
-        <ul class="footer-navigation-top">
-          <li><a href="">Компания</a></li>
-          <li><a href="">Новости</a></li>
-          <li><a href="catalog.html">Каталог</a></li>
-          <li><a href="">Доставка</a></li>
-          <li><a href="">Контакты</a></li>
-        </ul>
-        <ul class="footer-navigation-bottom">
-          <li><a href="">Материалы</a></li>
-          <li><a href="">Техника</a></li>
-          <li><a href="">Инструмент</a></li>
-          <li><a href="">Спецпредложения</a></li>
-        </ul>
+  <footer>
+    <div class="footer-box-wrapper">
+      <div class="container">
+        <div class="footer-box">
+          <div class="footer-logo">
+            <a href="">ТЕХНОМАРТ</a>
+          </div>
+          <div class="footer-address">
+            <p>г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8 +7 (812) 555-05-55</p>
+          </div>
+          <div class="footer-site-navigation">
+            <ul class="footer-navigation-top">
+              <li><a href="">Компания</a></li>
+              <li><a href="">Новости</a></li>
+              <li><a href="catalog.html">Каталог</a></li>
+              <li><a href="">Доставка</a></li>
+              <li><a href="">Контакты</a></li>
+            </ul>
+            <ul class="footer-navigation-bottom">
+              <li><a href="">Материалы</a></li>
+              <li><a href="">Техника</a></li>
+              <li><a href="">Инструмент</a></li>
+              <li><a href="">Спецпредложения</a></li>
+            </ul>
+          </div>
+        </div>
       </div>
     </div>
-    <div class="footer-copyright">
-      <p>© 2010–2019 Компания «Техномарт»<br>Все права защищены</p>
-      <ul class="social">
-        <li><a href="" class="social-button" aria-label="Мы Вконтакте"><img src="img/icon/icon-vk.svg" width="26px"
-              height="15px"></a></li>
-        <li><a href="" class="social-button" aria-label="Мы в Фейсбуке"><img src="img/icon/icon-fb.svg" width="12px"
-              height="22px"></a></li>
-        <li><a href="" class="social-button" aria-label="Мы в инстаграм"><img src="img/icon/icon-insta.svg" width="21px"
-              height="21px"></a></li>
-      </ul>
-      <div class="feedback-email">
-        <p>Обратная связь:</p>
-        <a href="">mail@htmlacademy.ru</a>
-      </div>
-      <div class="footer-developer">
-        <p>Разработано -</p>
-        <a href="https://htmlacademy.ru">htmlacademy.ru</a>
+    <div class="container">
+      <div class="footer-copyright">
+        <p>© 2010–2019 Компания «Техномарт»<br>Все права защищены</p>
+        <ul class="social">
+          <li><a href="" class="social-button" aria-label="Мы Вконтакте"><img src="img/icon/icon-vk.svg" width="26px"
+                height="15px"></a></li>
+          <li><a href="" class="social-button" aria-label="Мы в Фейсбуке"><img src="img/icon/icon-fb.svg" width="12px"
+                height="22px"></a></li>
+          <li><a href="" class="social-button" aria-label="Мы в инстаграм"><img src="img/icon/icon-insta.svg"
+                width="21px" height="21px"></a></li>
+        </ul>
+        <div class="feedback-email">
+          <p>Обратная связь:</p>
+          <a href="">mail@htmlacademy.ru</a>
+        </div>
+        <div class="footer-developer">
+          <p>Разработано -</p>
+          <a href="https://htmlacademy.ru">htmlacademy.ru</a>
+        </div>
       </div>
     </div>
   </footer>
